Build 27
Reworked highlight and selection system.